<resources>
    <string name="app_name">DFI HHT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_email_address">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="stock_inventory_label">Stock/Inventory</string>
    <string name="purchase_receipts">Purchase Receipts</string>
    <string name="misc_receipt">Miscellaneous Receipts</string>
    <string name="put_away">Put Away</string>
    <string name="picking_process">Picking Process</string>
    <string name="stock_change">Stock Change Transactions</string>
    <string name="stock_count">Stock Count</string>
    <string name="inter_site">Inter-site transfers</string>
    <string name="delivery_transactions">Delivery Transaction</string>
    <string name="orders_to_receive">Orders to Receive</string>
    <string name="location_wise_stock">Location wise Stock</string>
    <string name="po_inquiry">PO Inquiry</string>
    <string name="product_site_stock">Product-Site Stock</string>
    <string name="inquiries">Inquiries</string>
    <string name="production_reporting">Production Reporting of FG</string>
    <string name="operation_reporting">Operation Reporting</string>
    <string name="material_issue">Material Issue</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="settings">Settings</string>
    <string name="set_sites">Set Site</string>
    <string name="purchase_receipt">Purchase Receipt</string>
    <string name="receipt">Receipt</string>
    <string name="txn">Txn</string>
    <string name="ord">Ord</string>
    <string name="supp">Supp</string>
    <string name="lines">Lines</string>
    <string name="product">Product</string>
    <string name="line">Line</string>
    <string name="unit">Unit</string>
    <string name="qty">Qty</string>
    <string name="ctr">Ctr</string>
    <string name="lpn">LPN</string>
    <string name="sta">Sta</string>
    <string name="loc">Loc</string>
    <string name="supl">Supl</string>
    <string name="lot">Lot</string>
    <string name="s_io">S/Io</string>
    <string name="serial">Serial</string>
    <string name="expire">Expire</string>
    <string name="receipt_lines">Receipt Lines</string>
    <string name="clos">Clos</string>
    <string name="major_v">Major/V</string>
    <string name="minor_v">Minor/V</string>
    <string name="order_selection">Order Selection</string>
    <string name="filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_no">Order No</string>
    <string name="order_site">Order Site</string>
    <string name="supplier">Supplier</string>
    <string name="internal_or">Internal Or …</string>
    <string name="view_result">View Result</string>
    <string name="order_line_selection">Order Line Selection</string>
    <string name="product_no">Product No</string>
    <string name="order_line">Order Line</string>
    <string name="sequence_no">Sequence No</string>
    <string name="unit_selection">Unit Selection</string>
    <string name="stock_status">Stock Status</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="stock_by_lot">Stock by Lot/Location</string>
    <string name="sub_lot">Sublot</string>
    <string name="accepted_quantity">Accepted Quantity</string>
    <string name="quantity_controlled">Quantity to be Controlled</string>
    <string name="rejected_quantity">Rejected Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="use_by_date">Use-by-Date</string>
    <string name="potency">Potency</string>
    <string name="all_field_mandate">All fields are mandatory</string>
    <string name="check_network">Check network connection</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="search">Search</string>
    <string name="product_selection">Product Selection</string>
    <string name="expected_receipt_date">Expected Receipt Date</string>
    <string name="remain9ing_quantity">Remaining Quantity</string>
    <string name="supplier_id">Supplier Id</string>
    <string name="location">Location</string>
    <string name="location_selection">Location Selection</string>
    <string name="ware_house">Warehouse</string>
    <string name="location_type">Location Type</string>
    <string name="location_cat">Location Cat</string>
    <string name="storage_location">Storage Location</string>
    <string name="logout">Logout</string>
    <string name="apply">Apply</string>
    <string name="dialogMessage">Please set the site to continue..</string>
    <string name="logout_message">Are you sure to logout?</string>
    <string name="category">Category</string>
    <string name="buyer">Buyer</string>
    <string name="stock_managment">Stock Management</string>
    <string name="loc_management">Loc Management</string>
    <string name="ser_management">Serial No Management</string>
    <string name="po_number">PO Number</string>
    <string name="date">Date</string>
    <string name="request"><![CDATA[<PARAM><GRP ID="GRP1"><FLD NAME="SITE">AE022</FLD></GRP></PARAM>]]></string>
    <string name="uom">UOM</string>
    <string name="no_record">No record found</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="from_io">From Io</string>
    <string name="from_st">From St</string>
    <string name="to_sta">To Sta</string>
    <string name="stock_changes">Stock Change</string>
    <string name="transaction_selection">Transaction Selection</string>
    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="select_stock">Select Stock</string>
    <string name="to_site">To Site</string>
    <string name="stock">Stock</string>
    <string name="select_site">Slect Site</string>
    <string name="company">Company</string>
    <string name="site">Site</string>
    <string name="to_loc">To Loc</string>
</resources>