<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl_main"
        tools:context=".ui.inquiries.location_wise.LocationSelectionActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f2f2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorPrimary">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toLeftOf="@+id/layoutFilter"
                    android:layout_toRightOf="@+id/layoutBackClick"
                    android:gravity="center_horizontal"
                    android:text="@string/location_selection"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/secondary_title"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:id="@+id/layoutBackClick"
                    android:layout_width="@dimen/height_60_dp"
                    android:layout_height="@dimen/height_60_dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageViewBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_back_arrow"
                        app:tint="@color/white">

                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/dimen10dp"
                    android:background="@drawable/drawable_round_edge"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/filter"
                        android:textColor="@color/white"

                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_products"
                android:scrollbars="none"
                android:paddingTop="@dimen/dimen10dp"
                tools:listitem="@layout/item_location_selection"
                tools:itemCount="0"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_empty"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_record"
                android:textColor="@color/black"

                android:textSize="14sp"/>
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
